Fix spacing on different screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -86,7 +86,7 @@ body {
 
 .hero {
 	position: relative;
-	padding: min(1.5em, 50%) min(1.5em, 4%);
+	padding: 15px;
 	box-sizing: border-box;
 }
 
@@ -205,7 +205,7 @@ body {
 	justify-items: center;
 	align-items: center;
 	margin: 0 auto;
-	padding: 0 0 calc(101 * 1px);
+	padding: 50.5px 15px 101px;
 	row-gap: var(--rowGap);
 }
 
@@ -215,7 +215,7 @@ body {
 }
 
 .features > .inner {
-	padding: 128px 0;
+	padding: 0 15px 128px;
 	display: grid;
 	grid-template-rows: repeat(2, auto);
 	align-items: flex-start;
@@ -253,7 +253,7 @@ body {
 }
 
 .feature-cards > .card:first-child {
-	margin-top: 80px;
+	margin-top: 0px;
 }
 
 .feature-cards > .card:last-child {
@@ -580,9 +580,17 @@ body {
 		display: flex;
 	}
 
+	.companies > .inner {
+		padding: 0 0 101px;
+	}
+
 	.companies .item img {
 		max-width: 200px;
 		height: 40px;
+	}
+
+	.features > .inner {
+		padding: 128px 0;
 	}
 
 	.feature-column.feature-cards {
@@ -590,12 +598,16 @@ body {
 		column-gap: 32px;
 		row-gap: 32px;
 	}
+
+	.feature-cards > .card:first-child {
+		margin-top: 80px;
+	}
 }
 
 /* Tablets (≥ 768px) */
 @media (min-width: 48rem) {
 	.hero {
-		padding: min(4.5em, 50%) min(1.5em, 4%);
+		padding: min(4.5em, 50%) 15px;
 	}
 
 	.hero > .inner > .content .hero-copy .hero-top-proof {
